--- a/example/sample.yml
+++ b/example/sample.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: ./Dockerfile
     volumes:
-      - ./tmp/:/var/app/
+      - ./tmp:/var/app/
     tty: true
 
   nginx:
