--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Setup Python ${{ matrix.golang }}
         uses: actions/setup-python@v2
 
+      - name: Setup Graphviz
+        uses: ts-graphviz/setup-graphviz@v1
+
       - name: Install yaml-viz
         run: |
           pip install git+https://github.com/wf-yamaday/yaml-visualizer
