--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Setup Python ${{ matrix.golang }}
+      - name: Setup Python ${{ matrix.python }}
         uses: actions/setup-python@v2
 
       - name: Setup Graphviz
